--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -16,27 +16,35 @@
       <p><%= @game.black_player.name %> is playing as black.</p>
     </div>
 
-    
+    <div id="turn">
+      <% if current_game.white_player_turn == true %>
+        <p>The current turn belongs to: <%= current_game.white_player.name %></p>
+      <% end %>
+      <% if current_game.white_player_turn == false %>
+        <p>The current turn belongs to: <%= current_game.black_player.name %></p>
+      <% end %>
+    </div>
+  </div>
     
   <div class="col-10 center offset-1">
     <table id="chessboard">
       <tbody>
-        <% 8.downto(1).each do |row| %>
+        <% 1.upto(8).each do |col| %>
           <tr>
-            <% 1.upto(8).each do |col| %>
+            <% 8.downto(1).each do |row| %>
               <td
                 id=<%="#{col}#{row}"%>
-              <% if (col + row).odd? %>
-                class="white"
-              <% else %>
+              <% if (col + row).odd? %> 
                 class="black"
+              <% else %>
+                class="white"
               <% end %>
               >
-                <% piece_image = @game.render_piece(col, row) %>
+                <% piece_image = @game.render_piece(row, col) %>
                 <% if piece_image.present? %>
 
                  
-                  <% piece = @game.get_piece_at_coor(col, row) %>
+                  <% piece = @game.get_piece_at_coor(row, col) %>
                     <%= link_to game_piece_path(current_game, piece.id) do %>
                       <%= image_tag piece_image, :id => "piece", :data => {
                           :id => piece.id,
