--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -29,22 +29,22 @@
   <div class="col-10 center offset-1">
     <table id="chessboard">
       <tbody>
-        <% 1.upto(8).each do |col| %>
-          <tr>
-            <% 8.downto(1).each do |row| %>
+        <% 8.downto(1).each do |row| %>                                     
+          <tr> 
+            <% 1.upto(8).each do |col| %>
               <td
                 id=<%="#{col}#{row}"%>
-              <% if (col + row).odd? %> 
-                class="black"
-              <% else %>
-                class="white"
-              <% end %>
+                <% if (row + col).odd? %>
+                  class="white"
+                <% else %>
+                  class="black"
+                <% end %>
               >
-                <% piece_image = @game.render_piece(row, col) %>
+                <% piece_image = @game.render_piece(col, row) %>
                 <% if piece_image.present? %>
 
                  
-                  <% piece = @game.get_piece_at_coor(row, col) %>
+                  <% piece = @game.get_piece_at_coor(col, row) %>
                     <%= link_to game_piece_path(current_game, piece.id) do %>
                       <%= image_tag piece_image, :id => "piece", :data => {
                           :id => piece.id,
