--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -228,9 +228,7 @@ section .section-title {
     margin: 0 auto;
 }
 
-#empty-square {
 
-}
 
 table td {
     width: 90px;
@@ -269,7 +267,7 @@ td:hover::after {
     background-repeat: no-repeat;
 }
 
-a.move_to {
+a.dropzone {
   width: 100%;
   height: 100%;
   display: block;
@@ -277,9 +275,9 @@ a.move_to {
 
 #gameinfo {
   font-family: Helvetica, Times;
-  font-size: 36px;
+  font-size: 12px;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 
