--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -1,13 +1,3 @@
-<head>
-<script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
-  integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
-  crossorigin="anonymous"> 
-</script>
-</head>
-
-<body>
-
 <h1 class="text-center">The Pawnshop</h1>
 
   <div id="turn">
@@ -30,23 +20,25 @@
               <td
                 id=<%="#{col}#{row}"%>
                 <% if (row + col).odd? %>
-                  class="white"
+                  class="white dropzone"
                 <% else %>
-                  class="black"
+                  class="black dropzone"
                 <% end %>
                 >
-                <%= link_to game_piece_path(@game, @piece, params: {x_position: col, y_position: row}), class: "move_to", method: :put do %>
+               
+                <%= link_to game_piece_path(@game, @piece, params: {x_position: col, y_position: row}), class: "draggable", data: {id: @piece.id}, method: :put do %>
                   <% piece_image = @game.render_piece(col, row) %>
                   <% if piece_image.present? %>
 
                     <% piece = @game.get_piece_at_coor(col, row) %>
                       
-                    <%= image_tag piece_image, :id => "piece", :data => {
+                    <%= image_tag piece_image, :data => {  
                         :id => piece.id,
                         :type => piece.type,
                         :color => (piece.is_white ? "white" : "black"),
                         :x => piece.x_position,
                         :y => piece.y_position
+                         
                       }
                     %>
                <% end %>
